[tool.poetry]
name = "active_soccer_vision"
version = "0.1.0"
description = ""
authors = ["Florian <florian@flova.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.18.0"
stable-baselines3 = {extras = ["extra"], version = "^1.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
