[tool.poetry]
name = "active_soccer_vision"
version = "0.1.0"
description = ""
authors = ["Florian <florian@flova.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.18.0"
stable-baselines3 = {extras = ["extra"], version = "^1.0"}
opencv-python = "^4.5.1"
transforms3d = "^0.3.1"
seaborn = "^0.11.1"
PyYAML = "^5.4.1"
optuna = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
